# bifrost

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
bridge/: Cargo.toml
bridge/src/: main.rs
docker/: README.md  bridge.Dockerfile  builder.Dockerfile  grafana-ffi.Dockerfile  grafana.Dockerfile
examples/: demo_map_and_agg.rs  query_loki.rs
ffi-export/: Cargo.toml  README.md
ffi-export/src/: lib.rs
ffi-go-poc/: README.md  go.mod  go.sum  main.go
grafana-plugin/: README.md  go.mod  go.sum  package-lock.json  package.json  tsconfig.json  webpack.config.js
grafana-plugin/pkg/: main.go
grafana-plugin/pkg/lokiffi/: lokiffi.go
grafana-plugin/pkg/plugin/: datasource.go  engine.go  ffiengine.go  frames.go  frames_test.go  httpengine.go
grafana-plugin/src/: module.ts  plugin.json  types.ts
grafana-plugin/src/datasource/: ConfigEditor.tsx  QueryEditor.tsx  datasource.ts
scripts/: push_logs.py
src/: client.rs  config.rs  convert.rs  error.rs  exec.rs  lib.rs  logql.rs  pushdown.rs  schema.rs  table_provider.rs  time_range.rs
tests/: integration_test.rs
