[workspace]
members = ["bridge"]
resolver = "2"

[package]
name = "datafusion-loki"
version = "0.1.0"
edition = "2021"
description = "Apache DataFusion TableProvider for querying Grafana Loki log streams via LogQL"
license = "Apache-2.0"
repository = "https://github.com/example/datafusion-loki"
keywords = ["datafusion", "loki", "logql", "arrow", "observability"]
readme = "README.md"

[lib]
name = "datafusion_loki"
path = "src/lib.rs"

[dependencies]
# --- DataFusion / Arrow ---
datafusion = { version = "42", default-features = false, features = ["nested_expressions"] }
datafusion-expr = "42"
datafusion-physical-expr = "42"
arrow = { version = "53", features = ["prettyprint"] }
arrow-schema = "53"

# --- async runtime ---
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# --- HTTP client ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
url = "2"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- misc ---
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
wiremock = "0.6"
datafusion = { version = "42", default-features = false, features = ["nested_expressions"] }

[[example]]
name = "query_loki"
path = "examples/query_loki.rs"

[profile.release]
lto = true
