[workspace]
members = ["bridge", "ffi-export"]
resolver = "2"

[package]
name = "datafusion-loki"
version = "0.1.0"
edition = "2021"
description = "Apache DataFusion TableProvider for querying Grafana Loki log streams via LogQL"
license = "Apache-2.0"
repository = "https://github.com/example/datafusion-loki"
keywords = ["datafusion", "loki", "logql", "arrow", "observability"]
readme = "README.md"

[lib]
name = "datafusion_loki"
path = "src/lib.rs"

[dependencies]
# --- DataFusion / Arrow ---
# Pinned to =53.1.0 (not just "53") because datafusion-ffi's FFI ABI check
# (used by the datafusion-go Go binding prototype) requires an EXACT version
# match between producer and consumer crates.
# =53.1.0 is the exact DataFusion release datafusion-go's Go binding hard-pins
# to for its FFI ABI check. arrow/arrow-schema are pinned to exactly what this
# DataFusion release itself resolves internally (=58.4.0), since our code
# passes arrow types (RecordBatch, Schema) directly across the DataFusion API
# boundary and a version mismatch there fails to compile, not just to link.
datafusion = { version = "=53.1.0", default-features = false, features = ["nested_expressions", "sql"] }
datafusion-expr = "=53.1.0"
datafusion-physical-expr = "=53.1.0"
arrow = { version = "=58.4.0", features = ["prettyprint"] }
arrow-schema = "=58.4.0"

# --- async runtime ---
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# --- HTTP client ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
url = "2"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- misc ---
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
wiremock = "0.6"
datafusion = { version = "=53.1.0", default-features = false, features = ["nested_expressions", "sql"] }

[[example]]
name = "query_loki"
path = "examples/query_loki.rs"

[profile.release]
lto = true
